# prefect-k8s-poc

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  flow-register.yml  main.yml  pr-name-linter.yml
flows/: automatic.py  calculator.py  echo.py  rick_and_morty.py
flows/dummy/: dumi.py  dummy.py
flows/internal/: echoo.py  echooo.py
flows/pip/: rick_and_morty.py
flows/simple/: automatic.py
flows/testing/: gummy.py
manifests/: agent.yaml  rbac.yaml
scripts/: install-packages.sh
src/prefect_shared_tasks/: voice.py
