[tool.poetry]
name = "prefect-shared-tasks"
version = "0.1.0"
description = ""
authors = ["Gabriel Montañola <gabriel@montanola.com>"]

[tool.poetry.dependencies]
python = "~3.8"
prefect = {extras = ["aws", "github"], version = "^0.15.3"}
kubernetes = "^17.17.0"
pandas = "^1.3.0"
requests = "^2.25.1"
dbt = "^0.20.0"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.1"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
